# searchlight

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
docs/: cicd.md  local-search.md  react-hooks.md
examples/: rust_backend.rs
examples/react-web/: README.md  package.json  pnpm-lock.yaml
examples/react-web/src/: App.css  App.tsx  data.ts  search.ts
examples/react-web/src/components/: DocumentShelf.tsx  ResultList.tsx  SearchPanel.tsx  UsageNotes.tsx
examples/react-web/src/pages/: LocalHooksPage.tsx  WorkerHooksPage.tsx
pkg/: package.json  searchlight.d.ts  searchlight.js  searchlight_bg.js  searchlight_bg.wasm  searchlight_bg.wasm.d.ts
scripts/: build-react-wasm.sh  release-version.mjs
src/: cache.rs  error.rs  executor.rs  explain.rs  fuzzy.rs  highlighter.rs  index.rs  lib.rs  pinyin.rs  query.rs  rank.rs  tokenizer.rs  wasm_api.rs
