[package]
name = "luhanxin-searchlight"
authors = ["luhanxin <juwenzhangjzh@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "A lightweight full-text search toolkit with Chinese/English tokenization, BM25 ranking, fuzzy search, pinyin search, highlights, explainable scoring, related suggestions, and WebAssembly support."
license = "MIT"
repository = "https://github.com/juwenzhang/searchlight"
homepage = "https://github.com/juwenzhang/searchlight"
documentation = "https://docs.rs/luhanxin-searchlight"
readme = "README.md"
keywords = ["search", "full-text", "wasm", "pinyin", "bm25"]
categories = ["text-processing", "wasm"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/docs/*.md",
    "/examples/rust_backend.rs",
    "/src/**/*.rs",
]

[lib]
name = "searchlight"
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde"]
wasm = ["serde", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
aho-corasick = "1.1"
lru = "0.12"
pinyin = "0.10"
thiserror = "2"
unicode-segmentation = "1.12"
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
